@@ -7,6 +7,7 @@ import cam72cam.immersiverailroading.track.VecYPR;
 import cam72cam.immersiverailroading.tile.TileRail;
 import cam72cam.immersiverailroading.tile.TileRailBase;
 import cam72cam.immersiverailroading.track.IIterableTrack;
+import cam72cam.immersiverailroading.thirdparty.trackapi.IRPathingData;
 import cam72cam.immersiverailroading.util.VecUtil;
 import cam72cam.immersiverailroading.thirdparty.trackapi.ITrack;
 import cam72cam.mod.math.Rotation;
@@ -39,7 +40,7 @@ public class MovementTrack {
 		for (Vec3d pos : positions) {
 			for (double height : heightSkew) {
 				ITrack te = ITrack.get(world, pos.add(0, height + (currentPosition.y%1), 0), true);
-				if (te != null && Gauge.from(te.getTrackGauge()) == Gauge.from(gauge)) {
+				if (te != null && Gauge.from(te.getTrackGauges()[0]) == Gauge.from(gauge)) {
 					return te;
 				}
 				// HACK for cross gauge
@@ -52,24 +53,25 @@ public class MovementTrack {
 		return null;
 	}
 
-	public static Vec3d iterativePathing(World world, Vec3d currentPosition, ITrack te, double gauge, Vec3d motion, double maxDistance) {
-		Vec3d startPos = currentPosition;
-		Vec3d prevPosition = currentPosition;
+	public static void iterativePathing(World world, IRPathingData startPosition, ITrack te, double gauge, Vec3d motion, double maxDistance) {
+		IRPathingData iterationPosition = startPosition.clone();
+		IRPathingData prevPosition;
 		double totalDistance = motion.length();
 		double maxDistanceSquared = maxDistance * maxDistance;
 		double motionLengthSquared = motion.lengthSquared();
 
-		Vec3i teBlockPosition = new Vec3i(currentPosition);
+		Vec3i teBlockPosition = new Vec3i(startPosition.getUMCPos());
 
-		for (double currentDistance = 0; currentDistance < totalDistance; currentDistance += maxDistance) {
-			Vec3i currentBlockPosition = new Vec3i(currentPosition);
-			if (!currentBlockPosition.equals(teBlockPosition)) {
-				teBlockPosition = currentBlockPosition;
+		for (double iteratedDistance = 0; iteratedDistance < totalDistance; iteratedDistance += maxDistance) {
+			Vec3i iterationBlockPosition = new Vec3i(iterationPosition.getUMCPos());
+			if (!iterationBlockPosition.equals(teBlockPosition)) {
+				teBlockPosition = iterationBlockPosition;
 
-				te = findTrack(world, currentPosition, VecUtil.toWrongYaw(motion), gauge);
+				te = findTrack(world, iterationPosition.getUMCPos(), VecUtil.toWrongYaw(motion), gauge);
 				if (te == null) {
 					// Stuck
-					return currentPosition;
+					startPosition.advanceTo(iterationPosition);// It's sticking... seems not need to change roll
+					return;
 				}
 			}
 
@@ -78,35 +80,44 @@ public class MovementTrack {
 				motion = motion.scale(maxDistance / Math.sqrt(motionLengthSquared));
 			}
 
-			prevPosition = currentPosition;
-			currentPosition = te instanceof TileRailBase ? ((TileRailBase) te).getNextPositionShort(currentPosition, motion) : te.getNextPosition(currentPosition, motion);
-			motion = currentPosition.subtract(prevPosition);
+			prevPosition = iterationPosition.clone();
+
+            if (te instanceof TileRailBase base) {
+                base.getNextPositionShort(iterationPosition, motion, gauge);
+            } else {
+                te.getNextPosition(iterationPosition, motion, gauge);
+            }
+
+            motion = iterationPosition.getUMCPos().subtract(prevPosition.getUMCPos());
 			motionLengthSquared = motion.lengthSquared();
 
 			if (motionLengthSquared == 0) {
 				// Stuck
-				return prevPosition;
+				startPosition.advanceTo(prevPosition);
+				return;
 			}
 		}
 
 		// prevPosition + motion scaled to remaining distance
 		//double scale = (totalDistance - startPos.distanceTo(prevPosition)) / motion.length();
 		//if (scale > 0.00001 && scale < 1.5) {
-		//	currentPosition = prevPosition.add(motion.scale(scale));
+		//	iterationPosition = prevPosition.add(motion.scale(scale));
 		//}
-		currentPosition = startPos.add(currentPosition.subtract(startPos).normalize().scale(totalDistance));
+		Vec3d iterationPosRescaled = startPosition.getUMCPos().add(iterationPosition.getUMCPos().subtract(startPosition.getUMCPos()).normalize().scale(totalDistance));
 
-		return currentPosition;
+		startPosition.advanceTo(iterationPosRescaled, iterationPosition.getRoll());//we don't need to rescale the roll!
 	}
 
-	public static Vec3d nextPositionDirect(World world, Vec3d currentPosition, TileRail rail, Vec3d delta) {
+	public static void nextPositionDirect(World world, IRPathingData currentPosition, TileRail rail, Vec3d delta, double gauge) {//todo: gauges
 		if (rail == null) {
 			if (world.isServer) {
-				return null; // OFF TRACK
+				return; // OFF TRACK
 			} else {
-				return currentPosition.add(delta);
+				currentPosition.advanceTo(currentPosition.getUMCPos().add(delta), currentPosition.getRoll());
+				return;
 			}
 		}
+		int invertRollMultiplier = 1;
 
 		double railHeight = rail.info.getTrackHeight();
 		double distance = delta.length();
@@ -114,11 +125,13 @@ public class MovementTrack {
 
 		if (rail.info.settings.type == TrackItems.CROSSING) {
 			delta = VecUtil.fromWrongYaw(distance, Facing.fromAngle(VecUtil.toWrongYaw(delta)).getAngle());
-			return currentPosition.add(delta);
+			currentPosition.advanceTo(currentPosition.getUMCPos().add(delta), currentPosition.getRoll());
+			return;
 		} else if (rail.info.settings.type.isTable()) {
 			double tablePos = rail.getParentTile().info.tablePos;
 
-			currentPosition = currentPosition.add(delta);
+			currentPosition.advanceTo(currentPosition.getUMCPos().add(delta), currentPosition.getRoll());
+
 			Facing placementFacing = rail.info.placementInfo.facing();
 			Vec3d center, forward, backward;
 			double distanceToCenter;
@@ -126,7 +139,7 @@ public class MovementTrack {
 			if (rail.info.settings.type == TrackItems.TURNTABLE) {
 				angle = (float) tablePos + placementFacing.getAngle();
 				center = new Vec3d(rail.getParentTile().getPos()).add(0.5, 1 + heightOffset, 0.5);
-				distanceToCenter = currentPosition.distanceTo(center);
+				distanceToCenter = currentPosition.getUMCPos().distanceTo(center);
 			} else {
 				//Must be transfer table
 				int halfGauge = (int) Math.floor((rail.info.settings.gauge.value() * 1.1 + 0.5) / 2);
@@ -149,21 +162,23 @@ public class MovementTrack {
 						break;
 					default:
 						//WTH
-						return null;
+						return;
 				}
 				angle = -placementFacing.getAngle() + 180;
 				center = center.add(
 						new Vec3d(xValue, 2 + heightOffset, rail.info.settings.length / 2d).rotateYaw(angle));
-				distanceToCenter = currentPosition.distanceTo(center);
+				distanceToCenter = currentPosition.getUMCPos().distanceTo(center);
 			}
 
 			forward = center.add(VecUtil.fromWrongYaw(distanceToCenter, angle));
 			backward = center.add(VecUtil.fromWrongYaw(distanceToCenter, angle + 180));
 
-			if (forward.distanceToSquared(currentPosition) < backward.distanceToSquared(currentPosition)) {
-				return forward;
+			if (forward.distanceToSquared(currentPosition.getUMCPos()) < backward.distanceToSquared(currentPosition.getUMCPos())) {
+				currentPosition.advanceTo(forward, currentPosition.getRoll());
+				return;
 			} else {
-				return backward;
+				currentPosition.advanceTo(backward, currentPosition.getRoll());
+				return;
 			}
 		} else if (rail.info.getBuilder(world) instanceof IIterableTrack) {
 			/*
@@ -174,25 +189,41 @@ public class MovementTrack {
 			 */
 			List<VecYPR> positions = ((IIterableTrack) rail.info.getBuilder(world)).getPath(0.25 * rail.info.settings.gauge.scale());
 			Vec3d center = rail.info.placementInfo.placementPosition.add(rail.getPos()).add(0, heightOffset, 0);
-			Vec3d target = currentPosition.add(delta);
+			Vec3d target = currentPosition.getUMCPos().add(delta);
 			Vec3d relative = target.subtract(center);
 
 			if (positions.isEmpty()) {
 				ImmersiveRailroading.error("Invalid track path %s", rail.info.uniqueID);
-				return currentPosition; // keep in same place for debugging
+
+				currentPosition.advanceTo(currentPosition.getUMCPos().add(delta), currentPosition.getRoll());
+				return ; // keep in same place for debugging
 			}
 			if (positions.size() == 1) {
 				// track with length == 1
-				VecYPR pos = positions.get(0);
+				VecYPR pos = positions.getFirst();
 				Vec3d offset = VecUtil.fromYaw(delta.length(), pos.getYaw());
-				Vec3d result = currentPosition.add(offset);
-				Vec3d resultOpposite = currentPosition.subtract(offset);
+				Vec3d result = currentPosition.getUMCPos().add(offset);
+				Vec3d resultOpposite = currentPosition.getUMCPos().subtract(offset);
+
+				double roll = pos.getRoll();
+
 				if (result.distanceToSquared(target) < resultOpposite.distanceToSquared(target)) {
-					return result;
-				} else {
-					return resultOpposite;
-				}
-			}
+					if(VecUtil.delta(
+							VecUtil.toWrongYaw(pos.getYaw()),
+							VecUtil.toWrongYaw(result.subtract(currentPosition.getUMCPos()))
+					) > 90) invertRollMultiplier = -1;
+
+					currentPosition.advanceTo(result, roll * invertRollMultiplier);
+                } else {
+					if(VecUtil.delta(
+							VecUtil.toWrongYaw(pos.getYaw()),
+							VecUtil.toWrongYaw(resultOpposite.subtract(currentPosition.getUMCPos()))
+					) > 90) invertRollMultiplier = -1;
+
+					currentPosition.advanceTo(resultOpposite, roll * invertRollMultiplier);
+                }
+                return;
+            }
 
 			/* Simple ordered binary search ***
 			l    c      r
@@ -230,24 +261,51 @@ public class MovementTrack {
 			VecYPR rightPos = positions.get(right);
 
 			if (leftDistance < 0.000001) {
-				return center.add(leftPos);
+				if(VecUtil.delta(
+						VecUtil.toWrongYaw(leftPos.getYaw()),
+						VecUtil.toWrongYaw(center.add(leftPos).subtract(currentPosition.getUMCPos()))
+				) > 90) invertRollMultiplier = -1;
+
+				currentPosition.advanceTo(center.add(leftPos), leftPos.getRoll() * invertRollMultiplier);
+				return ;
 			}
 			if (rightDistance < 0.000001) {
-				return center.add(rightPos);
+				if(VecUtil.delta(VecUtil.toWrongYaw(rightPos.getYaw()),
+						VecUtil.toWrongYaw(center.add(rightPos).subtract(currentPosition.getUMCPos()))
+				) > 90) invertRollMultiplier = -1;
+
+				currentPosition.advanceTo(center.add(rightPos), rightPos.getRoll() * invertRollMultiplier);
+				return ;
 			}
 
 			Vec3d between = rightPos.subtract(leftPos);
-			Vec3d offset = between.scale(Math.sqrt(leftDistance) / between.length());
+			double t = Math.sqrt(leftDistance) / between.length();
+			Vec3d offset = between.scale(t);
 			// Weird edge case where we need to move in the opposite direction since we are given a position past the end of pathing
 			Vec3d point = center.add(leftPos);
 			Vec3d result = point.add(offset);
 			Vec3d resultOpposite = point.subtract(offset);
+			double resRoll = leftPos.getRoll() + (rightPos.getRoll() - leftPos.getRoll()) * t;
+			double resRollOpposite = leftPos.getRoll() - (rightPos.getRoll() - leftPos.getRoll()) * t;
+
 			if (result.distanceToSquared(target) < resultOpposite.distanceToSquared(target)) {
-				return result;
+				if(VecUtil.delta(
+						VecUtil.toWrongYaw(leftPos.getYaw()),
+						VecUtil.toWrongYaw(result.subtract(currentPosition.getUMCPos()))
+				) > 90) invertRollMultiplier = -1;
+
+				currentPosition.advanceTo(result, resRoll * invertRollMultiplier);
+				return;
 			} else {
-				return resultOpposite;
+				if(VecUtil.delta(
+						VecUtil.toWrongYaw(leftPos.getYaw()),
+						VecUtil.toWrongYaw(resultOpposite.subtract(currentPosition.getUMCPos()))
+				) > 90) invertRollMultiplier = -1;
+
+				currentPosition.advanceTo(resultOpposite, resRollOpposite * invertRollMultiplier);
+				return;
 			}
 		}
-		return currentPosition.add(delta);
+		currentPosition.advanceTo(currentPosition.getUMCPos().add(delta), currentPosition.getRoll());
 	}
 }
